cmake_minimum_required(VERSION 3.17)
project(untitled1)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled1 main.cpp interface.cpp interface.h territorio.cpp territorio.h territorioJogador.cpp territorioJogador.h mundo.cpp mundo.h castelo.cpp castelo.h duna.cpp duna.h planicie.cpp planicie.h montanha.cpp montanha.h continente.cpp continente.h ilhas.cpp ilhas.h fortaleza.cpp fortaleza.h mina.cpp mina.h pescaria.cpp pescaria.h refugios.cpp refugios.h logica.cpp tecnologias.cpp tecnologias.h territorioI.cpp territorioI.h logica.cpp logica.h)